--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation('org.apache.mahout:mahout-mr:0.10.0') {
+    implementation('org.apache.mahout:mahout-mr:0.13.0') {
         exclude group: "org.apache.mahout", module: "mahout-hdfs"
         exclude group: "org.apache.hadoop", module: "hadoop-client"
         exclude group: "com.thoughtworks.xstream", module: "xstream"
