--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:orientation="horizontal"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/MyApp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ProgressBarActivity"></activity>
+        <activity android:name=".SummaryActivity"></activity>
+        <activity android:name=".ProgressBarActivity" />
         <activity android:name=".RecommendationActivity" />
         <activity android:name=".RatingActivity" />
         <activity android:name=".MainActivity">
